@@ -72,6 +72,7 @@ Version 1.5.6beta05 [October 12, 2011]
 
 Version 1.5.6beta06 [October 13, 2011]
   Removed two redundant tests for unitialized row.
+  Added png_get_compression_buffer() API.
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net:
 (subscription required; visit
