@@ -1,4 +1,4 @@
-.TH LIBPNG 3 "October 12, 2011"
+.TH LIBPNG 3 "October 13, 2011"
 .SH NAME
 libpng \- Portable Network Graphics (PNG) Reference Library 1.5.6beta06
 .SH SYNOPSIS
@@ -151,6 +151,10 @@ libpng \- Portable Network Graphics (PNG) Reference Library 1.5.6beta06
 \fI\fB
 
 \fBpng_byte png_get_color_type (png_const_structp \fP\fIpng_ptr\fP\fB, png_const_infop \fIinfo_ptr\fP\fB);\fP
+
+\fI\fB
+
+\fBpng_bytep png_get_compression_buffer (png_const_structp \fIpng_ptr\fP\fB);\fP
 
 \fI\fB
 
@@ -977,7 +981,7 @@ Following is a copy of the libpng-manual.txt file that accompanies libpng.
 .SH LIBPNG.TXT
 libpng-manual.txt - A description on how to use and modify libpng
 
- libpng version 1.5.6beta06 - October 12, 2011
+ libpng version 1.5.6beta06 - October 13, 2011
  Updated and distributed by Glenn Randers-Pehrson
  <glennrp at users.sourceforge.net>
  Copyright (c) 1998-2011 Glenn Randers-Pehrson
@@ -988,7 +992,7 @@ libpng-manual.txt - A description on how to use and modify libpng
 
  Based on:
 
- libpng versions 0.97, January 1998, through 1.5.6beta06 - October 12, 2011
+ libpng versions 0.97, January 1998, through 1.5.6beta06 - October 13, 2011
  Updated and distributed by Glenn Randers-Pehrson
  Copyright (c) 1998-2011 Glenn Randers-Pehrson
 
@@ -4670,6 +4674,13 @@ compressed chunks such as zTXt, iTXt, and iCCP:
     png_set_text_compression_method(png_ptr, method);
     #endif
 
+As of libpng version 1.5.6, an API became available for
+retrieving a pointer to the compression buffer:
+
+#if PNG_GET_COMPRESSION_BUFFER_SUPPORTED
+    png_bytep buffer = png_get_compression_buffer(png_ptr);
+#endif
+
 .SS Controlling row filtering
 
 If you want to control whether libpng uses filtering or not, which
@@ -5541,7 +5552,7 @@ Other rules can be inferred by inspecting the libpng source.
 
 .SH XIV. Y2K Compliance in libpng
 
-October 12, 2011
+October 13, 2011
 
 Since the PNG Development group is an ad-hoc body, we can't make
 an official declaration.
@@ -5803,7 +5814,7 @@ possible without all of you.
 
 Thanks to Frank J. T. Wojcik for helping with the documentation.
 
-Libpng version 1.5.6beta06 - October 12, 2011:
+Libpng version 1.5.6beta06 - October 13, 2011:
 Initially created in 1995 by Guy Eric Schalnat, then of Group 42, Inc.
 Currently maintained by Glenn Randers-Pehrson (glennrp at users.sourceforge.net).
 
@@ -5826,7 +5837,7 @@ this sentence.
 
 This code is released under the libpng license.
 
-libpng versions 1.2.6, August 15, 2004, through 1.5.6beta06, October 12, 2011, are
+libpng versions 1.2.6, August 15, 2004, through 1.5.6beta06, October 13, 2011, are
 Copyright (c) 2004,2006-2007 Glenn Randers-Pehrson, and are
 distributed according to the same disclaimer and license as libpng-1.2.5
 with the following individual added to the list of Contributing Authors
@@ -5925,7 +5936,7 @@ certification mark of the Open Source Initiative.
 
 Glenn Randers-Pehrson
 glennrp at users.sourceforge.net
-October 12, 2011
+October 13, 2011
 
 .\" end of man page
 
